--- a/GreenForce/app/src/main/res/layout/ranked_user_layout.xml
+++ b/GreenForce/app/src/main/res/layout/ranked_user_layout.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:orientation="horizontal"
     android:gravity="center"
-    android:background="@color/colorWhite"
+    android:background="@drawable/ranked_custom_border"
     android:padding="5dp">
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+
         android:layout_weight="0.8"
         >
     <TextView
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorBlack"
         android:layout_margin="5dp"
-        android:textSize="15sp"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:text="1"
         android:layout_weight="0.1"
         />
@@ -29,7 +31,7 @@
         android:layout_height="match_parent"
         android:textColor="@color/colorBlack"
         android:layout_margin="5dp"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:text="Username"
         android:layout_weight="0.3"
         />
@@ -39,7 +41,7 @@
         android:layout_height="match_parent"
         android:textColor="@color/colorBlack"
         android:layout_margin="5dp"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:text="100 pts"
         android:layout_weight="0.3"
         />
