--- a/GreenForce/app/src/main/res/layout/activity_rankings.xml
+++ b/GreenForce/app/src/main/res/layout/activity_rankings.xml
@@ -35,9 +35,11 @@
         android:orientation="horizontal"
         >
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/profile_default"/>
+                android:layout_width="96dp"
+                android:background="@drawable/card_rank"
+                android:layout_height="96dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/my_rankings_logo"/>
 
     </LinearLayout>
 
