--- a/GreenForce/app/src/main/res/layout/activity_rankings.xml
+++ b/GreenForce/app/src/main/res/layout/activity_rankings.xml
@@ -27,66 +27,24 @@
 
 
     </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_height="0dp"
+        android:layout_weight="0.18"
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/profile_default"/>
 
-   <LinearLayout
-       android:background="@drawable/card_rank"
-       android:layout_gravity="center"
-       android:layout_height="wrap_content"
-       android:layout_width="wrap_content"
-       android:orientation="horizontal"
-       >
-
-       <LinearLayout
-           android:layout_width="0dp"
-           android:layout_weight="0.2"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center|left"
-           android:layout_marginLeft="7dp"
-           android:background="@drawable/ranking_icon_layout" >
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:textSize="15dp"
-               android:textColor="@color/colorWhite"
-               android:text="2"/>
-
-       </LinearLayout>
-
-       <LinearLayout
-           android:layout_width="0dp"
-           android:layout_weight="0.2"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center|left"
-           android:layout_marginLeft="7dp"
-           android:background="@drawable/ranking_icon_layout" >
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:textSize="15dp"
-               android:textColor="@color/colorWhite"
-               android:text="1"/>
-       </LinearLayout>
-       <LinearLayout
-           android:layout_width="0dp"
-           android:layout_weight="0.2"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center|left"
-           android:layout_marginLeft="8dp"
-           android:background="@drawable/ranking_icon_layout" >
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:textSize="15dp"
-               android:textColor="@color/colorWhite"
-               android:text="3"/>
-       </LinearLayout>
-
-   </LinearLayout>
+    </LinearLayout>
 
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_weight="0.05"
+        android:layout_weight="0.07"
         android:layout_marginTop="5dp"
         android:id="@+id/radio_group"
         android:gravity="center_horizontal"
@@ -127,7 +85,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.06"
+        android:layout_weight="0.08"
         android:orientation="horizontal"
         android:background="@drawable/custom_border"
         android:layout_marginLeft="15dp"
