--- a/GreenForce/app/src/main/res/layout/event_photos_layout.xml
+++ b/GreenForce/app/src/main/res/layout/event_photos_layout.xml
@@ -3,5 +3,11 @@
     android:layout_width="match_parent"
     android:id="@+id/event_photos_layout_id"
     android:layout_height="match_parent">
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/event_photos_recycler"
+    android:scrollbars="vertical">
 
+</androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
