--- a/GreenForce/app/src/main/res/layout/event_upload_photo.xml
+++ b/GreenForce/app/src/main/res/layout/event_upload_photo.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    tools:context=".activities.UploadPhotoActivity"
     android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/rankings_toolbar"
+            android:id="@+id/upload_photo_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:popupTheme="@style/AppTheme.PopupOverlay">
@@ -42,6 +43,7 @@
             android:text="@string/add_a_photo"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
+            android:id="@+id/upload_photo_button"
             />
 
     </LinearLayout>
@@ -49,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.7"
-        android:id="@+id/mark_a_spot_photos_recycler"
+        android:id="@+id/upload_photos_recycler"
         android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -64,11 +66,13 @@
             android:text="@string/cancel"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:id="@+id/mark_spot_cancel"
             android:layout_marginRight="15dp"
             />
 
         <Button
-            android:text="Finish"
+            android:text="@string/finish"
+            android:id="@+id/mark_spot_finish"
             android:layout_marginLeft="15dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
