--- a/GreenForce/app/src/main/res/layout/activity_events_map.xml
+++ b/GreenForce/app/src/main/res/layout/activity_events_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventsMapActivity">
+    tools:context=".activities.EventsMapActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarEventsMap"
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/events_map_linearLayout"
-        tools:context=".EventsMapActivity"
+        tools:context=".activities.EventsMapActivity"
         android:layout_height="0dp" />
 
 
