--- a/GreenForce/app/src/main/res/layout/event_info_layout.xml
+++ b/GreenForce/app/src/main/res/layout/event_info_layout.xml
@@ -37,6 +37,7 @@
                 />
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/event_info_points"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="@color/colorBlack"
@@ -62,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:id="@+id/event_info_status"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp"
                 android:layout_gravity="center"
