--- a/GreenForce/app/src/main/res/layout/fragment_my_profile_main.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_my_profile_main.xml
@@ -153,7 +153,7 @@
         app:layout_constraintVertical_bias="0.07" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/my_profile_current_events"
         android:layout_width="114dp"
         android:layout_height="46dp"
         android:background="@drawable/round_button_red"
@@ -167,6 +167,7 @@
         app:layout_constraintVertical_bias="0.275" />
 
     <Button
+        android:id="@+id/my_profile_completed_events"
         android:layout_width="114dp"
         android:layout_height="46dp"
         android:background="@drawable/round_button_greenblue"
@@ -175,7 +176,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.31"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/my_profile_current_events"
         app:layout_constraintTop_toBottomOf="@+id/view2"
         app:layout_constraintVertical_bias="0.274" />
 
