--- a/GreenForce/app/src/main/res/layout/fragment_my_profile_edit.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_my_profile_edit.xml
@@ -113,6 +113,7 @@
         android:id="@+id/button_change_password"
         android:layout_width="150dp"
         android:layout_height="40dp"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/round_button"
         android:text="@string/change_password"
         app:layout_constraintBottom_toBottomOf="parent"
