--- a/GreenForce/app/src/main/res/layout/mark_a_spot_about.xml
+++ b/GreenForce/app/src/main/res/layout/mark_a_spot_about.xml
@@ -21,16 +21,16 @@
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
     />
-    <TextView
-    android:text="Events"
-    android:layout_marginLeft="7dp"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:textStyle="bold"
-    android:textColor="@color/colorBlack"
-    android:textSize="18sp"
+<!--    <TextView-->
+<!--    android:text="Events"-->
+<!--    android:layout_marginLeft="7dp"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:textStyle="bold"-->
+<!--    android:textColor="@color/colorBlack"-->
+<!--    android:textSize="18sp"-->
 
-    />
+<!--    />-->
     <TextView
         android:text="@string/about_events"
         android:layout_marginLeft="7dp"
